--- a/index.html
+++ b/index.html
@@ -6,150 +6,119 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/style.css">
-   <title>Aloha</title>
+   <title>Aleksandr Dudnikov</title>
 </head>
 
 <body>
    <div class="wrapper">
-      <header class="header">
-         <div class="header__container container">
-            <div class="header__body">
-               <div class="header__logo"><img src="img/logo.svg" alt=""></div>
-               <div class="header__menu menu">
-                  <div class="menu__icon">
-                     <span></span>
-                  </div>
-                  <ul class="menu__list">
-                     <li class="menu__item"><a href="" class="menu__link">Projects</a></li>
-                     <li class="menu__item"><a href="" class="menu__link">About</a></li>
-                     <li class="menu__item"><a href="" class="menu__link">Blog</a></li>
-                     <li class="menu__item"><a href="" class="menu__link">Contact</a></li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-      </header>
       <div class="top">
-         <div class="top__container container">
+         <div class="container">
             <div class="top__body">
-               <div class="top__title title">Creating purpose-built brands & websites</div>
-               <div class="top__image ibg"><img src="img/topp_bc.jpg" alt=""></div>
-            </div>
-         </div>
-      </div>
-      <div class="help">
-         <div class="help__container container">
-            <div class="help__title title">I help emerging brands get their footing in today's digital world.</div>
-            <div class="help__btn btn"><a href="" class="btn__link">See my work</a></div>
-         </div>
-      </div>
-      <div class="middle">
-         <div class="middle__container container">
-            <div class="middle__row">
-               <div class="middle_img"><img src="img/middle_01.jpg" alt=""></div>
-               <div class="middle__text text">
-                  <div class="text__body">
-                     <div class="text__title text__title-up">My services are perfect for companies that are just getting
-                        started</div>
-                     <div class="text__btn btn"><a href="" class="btn__link">Learn more</a></div>
+               <div class="top__col col-top col-top__left">
+                  <div class="col-top__image"><img src="img/me.jpg" alt=""></div>
+               </div>
+               <div class="top__col col-top">
+                  <div class="col-top__hello">
+                     <h1>Hi, my name is Alexander.
+                        I’m a beginner front-end
+                        developer.</h1>
                   </div>
                </div>
             </div>
-            <div class="middle__row middle__row-down">
-               <div class="middle__text text">
-                  <div class="text__body-down">
-                     <div class="text__title text__title-down">I'm always on the go. Follow along!</div>
-                     <div class="text__btn btn"><a href="" class="btn__link">@aloha</a></div>
-                  </div>
+         </div>
+      </div>
+      <div class="skills">
+         <div class="container">
+            <div class="skills__body">
+               <div class="skills__title">
+                  <h2 class="title">My skills</h2>
                </div>
-               <div class="middle_img"><img src="img/middle_02.jpg" alt=""></div>
-            </div>
-         </div>
-      </div>
-      <div class="rate">
-         <div class="rate__container container">
-            <div class="rate__title title">"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</div>
-            <div class="rate__subtitle">Full Name, CEO at Client</div>
-         </div>
-      </div>
-      <div class="talk">
-         <div class="talk__container container">
-            <div class="talk__title title">Seem like a good fit?
-            </div>
-            <div class="talk__btn btn"><a href="" class="btn__link">Let's talk!</a></div>
-         </div>
-      </div>
-      <footer class="footer">
-         <div class="footer__container container">
-            <div class="footer__body">
-               <div class="footer__left-part">
-                  <div class="footer__col col-footer">
-                     <div class="col-footer__body-1">
-                        <div class="col-footer__title">© Aloha</div>
-                        <div class="col-footer__subtitle">Powered by <a href=""
-                              class="col-footer__link menu__link">Webflow</a></div>
-                     </div>
-                     <div class="col-footer__logo"><img src="img/foot_logo.svg" alt=""></div>
-                  </div>
-               </div>
-               <div class="footer__right-part">
-                  <div class="right-part__body">
-                     <div class="footer__col col-footer">
-                        <div class="col-footer__body-2">
-                           <ul class="col-footer__list">
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">About</a></li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Contact</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Licenses</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Style
-                                    Guide</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Changelog</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Password</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">404</a></li>
-                           </ul>
+               <div class="skills__items items-skills">
+                  <div class="items-skills__body">
+                     <div class="items-skills__item item-skills">
+                        <div class="item-skills__body">
+                           <img src="img/skills/html5.svg" alt="html">
                         </div>
                      </div>
-                     <div class="footer__col col-footer">
-                        <div class="col-footer__body-3">
-                           <ul class="col-footer__list">
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Home 1</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Home 2</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Work 1</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Work 2</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Blog 1</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Blog 2</a>
-                              </li>
-                           </ul>
+                     <div class="items-skills__item item-skills">
+                        <div class="item-skills__body">
+                           <img src="img/skills/css3.svg" alt="css">
                         </div>
                      </div>
-                     <div class="footer__col col-footer">
-                        <div class="col-footer__body-4">
-                           <ul class="col-footer__list">
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Twitter</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Instagram</a>
-                              </li>
-                              <li class="col-footer__item"><a href="" class="col-footer__link menu__link">Facebook</a>
-                              </li>
-                           </ul>
+                     <div class="items-skills__item item-skills">
+                        <div class="item-skills__body">
+                           <img src="img/skills/javascript.svg" alt="js">
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="skills__title">
+                  <h2 class="title">Also indulging :)</h2>
+               </div>
+               <div class="skills__items items-skills">
+                  <div class="items-skills__body">
+                     <div class="items-skills__item item-skills">
+                        <div class="item-skills__body">
+                           <img src="img/skills/sass.svg" alt="html">
+                        </div>
+                     </div>
+                     <div class="items-skills__item item-skills">
+                        <div class="item-skills__body">
+                           <img src="img/skills/figma.svg" alt="css">
+                        </div>
+                     </div>
+                     <div class="items-skills__item item-skills">
+                        <div class="item-skills__body">
+                           <img src="img/skills/react.svg" alt="js">
                         </div>
                      </div>
                   </div>
                </div>
             </div>
-      </footer>
-   </div>
+         </div>
+      </div>
+      <div class="port">
+         <div class="container">
+            <div class="port__body">
+               <div class="port__title">
+                  <h2 class="title">My teaching portfolio</h2>
+               </div>
+               <div class="port__items items-port">
+                  <div class="items-port__body">
+                     <div class="items-port__item item-port">
+                        <div class="item-port__body">
+                           <div class="item-port__image"><a href="/portfolio/aloha/index.html"
+                                 class="item-port__link-image"><img src="/img/port/aloha.jpg" alt=""></a></div>
+                           <div class="item-port__title">
+                              <h3><a href="/portfolio/aloha/index.html" class="item-port__link">Aloha</a></h3>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="items-port__item item-port">
+                        <div class="item-port__body">
+                           <div class="item-port__image"><a href="/portfolio/explore/index.html"
+                                 class="item-port__link-image"><img src="/img/port/explorer.jpg" alt=""></a></div>
+                           <div class="item-port__title">
+                              <h3><a href="/portfolio/explore/index.html" class="item-port__link">Explorer</a></h3>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="items-port__item item-port">
+                        <div class="item-port__body">
+                           <div class="item-port__image"><a href="/portfolio/nft/index.html"
+                                 class="item-port__link-image"><img src="/img/port/nft.jpg" alt=""></a></div>
+                           <div class="item-port__title">
+                              <h3><a href="/portfolio/nft/index.html" class="item-port__link">NFT Peeps</a></h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
 
-   <script src="js/script.js"></script>
+            </div>
+         </div>
+      </div>
+   </div>
 </body>
 
 </html>
