--- a/index.html
+++ b/index.html
@@ -87,28 +87,28 @@
                   <div class="items-port__body">
                      <div class="items-port__item item-port">
                         <div class="item-port__body">
-                           <div class="item-port__image"><a href="/portfolio/aloha/index.html"
-                                 class="item-port__link-image"><img src="/img/port/aloha.jpg" alt=""></a></div>
+                           <div class="item-port__image"><a href="portfolio/aloha/index.html"
+                                 class="item-port__link-image"><img src="img/port/aloha.jpg" alt=""></a></div>
                            <div class="item-port__title">
-                              <h3><a href="/portfolio/aloha/index.html" class="item-port__link">Aloha</a></h3>
+                              <h3><a href="portfolio/aloha/index.html" class="item-port__link">Aloha</a></h3>
                            </div>
                         </div>
                      </div>
                      <div class="items-port__item item-port">
                         <div class="item-port__body">
-                           <div class="item-port__image"><a href="/portfolio/explore/index.html"
-                                 class="item-port__link-image"><img src="/img/port/explorer.jpg" alt=""></a></div>
+                           <div class="item-port__image"><a href="portfolio/explore/index.html"
+                                 class="item-port__link-image"><img src="img/port/explorer.jpg" alt=""></a></div>
                            <div class="item-port__title">
-                              <h3><a href="/portfolio/explore/index.html" class="item-port__link">Explorer</a></h3>
+                              <h3><a href="portfolio/explore/index.html" class="item-port__link">Explorer</a></h3>
                            </div>
                         </div>
                      </div>
                      <div class="items-port__item item-port">
                         <div class="item-port__body">
-                           <div class="item-port__image"><a href="/portfolio/nft/index.html"
-                                 class="item-port__link-image"><img src="/img/port/nft.jpg" alt=""></a></div>
+                           <div class="item-port__image"><a href="portfolio/nft/index.html"
+                                 class="item-port__link-image"><img src="img/port/nft.jpg" alt=""></a></div>
                            <div class="item-port__title">
-                              <h3><a href="/portfolio/nft/index.html" class="item-port__link">NFT Peeps</a></h3>
+                              <h3><a href="portfolio/nft/index.html" class="item-port__link">NFT Peeps</a></h3>
                            </div>
                         </div>
                      </div>
