--- a/portfolio/aloha/index.html
+++ b/portfolio/aloha/index.html
@@ -12,7 +12,8 @@
 <body>
    <div class="wrapper">
       <div class="navigation">
-         <div class="navigation__body"><a href="../" class="navigation__link">Back to Aleksandr</a></div>
+         <div class="navigation__body"><a href="https://zverzor.github.io/aloha" class="navigation__link">Back to
+               Aleksandr</a></div>
       </div>
       <header class="header">
          <div class="header__container container">
