--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220606211646">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220607180340">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -211,23 +211,207 @@
 					</div>
 				</div>
 			</div>
+			<div class="slider-top-main">
+				<div class="slider-top-main__container">
+					<div class="slider-top-main__body">
+						<div class="slider-top-main__slider swiper">
+							<div class="slider-top-main__wrapper swiper-wrapper">
+								<div class="slider-top-main__slide swiper-slide">
+									<div class="slide-slider-top-main__body">
+										<div class="slide-slider-top-main__gradient"></div>
+										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+										</div>
+										<div class="slide-slider-top-main__text">
+											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="slider-top-main__slide swiper-slide">
+									<div class="slide-slider-top-main__body">
+										<div class="slide-slider-top-main__gradient"></div>
+										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+										</div>
+										<div class="slide-slider-top-main__text">
+											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="slider-top-main__slide swiper-slide">
+									<div class="slide-slider-top-main__body">
+										<div class="slide-slider-top-main__gradient"></div>
+										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+										</div>
+										<div class="slide-slider-top-main__text">
+											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="slider-top-main__slide swiper-slide">
+									<div class="slide-slider-top-main__body">
+										<div class="slide-slider-top-main__gradient"></div>
+										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+										</div>
+										<div class="slide-slider-top-main__text">
+											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="slider-top-main__slide swiper-slide">
+									<div class="slide-slider-top-main__body">
+										<div class="slide-slider-top-main__gradient"></div>
+										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+										</div>
+										<div class="slide-slider-top-main__text">
+											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Если нужна пагинация -->
+							<div class="swiper-pagination"></div>
+							<!-- Если нужна навигация (влево/вправо) -->
+							<button type="button" class="swiper-button-prev"></button>
+							<button type="button" class="swiper-button-next"></button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="newlvl">
+				<div class="newlvl__container">
+					<div class="newlvl__body">
+						<div class="newlvl__frame"></div>
+						<div class="newlvl__text">
+							<p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
+								but because occasionally circumstances Nor again is there anyone who loves or pursues or desires to
+								obtain pain of itself, because it is pain, but because occasionally circumstances </p>
+						</div>
+						<div class="newlvl__title"><span class="yellow-title">Б19 - НОВИЙ РІВЕНЬ </span><span class="yellow-title">МЕНЕДЖМЕНТУ</span></div>
+						<div class="newlvl__row row-newlvl">
+							<div class="row-newlvl__item item-newlvl">
+								<div class="item-newlvl__body">
+									<div class="item-newlvl__image"><img src="img/newlvl/item01.png" alt="item"></div>
+									<div class="item-newlvl__label">
+										<h3>Ми сучасні</h3>
+									</div>
+								</div>
+							</div>
+							<div class="row-newlvl__item item-newlvl">
+								<div class="item-newlvl__body">
+									<div class="item-newlvl__image"><img src="img/newlvl/item02.png" alt="item"></div>
+									<div class="item-newlvl__label">
+										<h3>Ми - доступні та швидкі</h3>
+									</div>
+								</div>
+							</div>
+							<div class="row-newlvl__item item-newlvl">
+								<div class="item-newlvl__body">
+									<div class="item-newlvl__image"><img src="img/newlvl/item03.png" alt="item"></div>
+									<div class="item-newlvl__label">
+										<h3>Ми відповідаємо</h3>
+									</div>
+								</div>
+							</div>
+							<div class="row-newlvl__item item-newlvl">
+								<div class="item-newlvl__body">
+									<div class="item-newlvl__image"><img src="img/newlvl/item04.svg" alt="item"></div>
+									<div class="item-newlvl__label">
+										<h3>Ми у Києві</h3>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="slider-main">
+				<div class="slider-main__container">
+					<div class="slider-main__body">
+						<div class="slider-main__title title">
+							<h2><span class="yellow-title">Наші проєкти</span></h2>
+						</div>
+						<div class="slider-main__slider swiper">
+							<div class="slider-main__wrapper swiper-wrapper">
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+								</div>
+							</div>
+							<!-- Если нужна пагинация -->
+							<div class="swiper-pagination"></div>
+							<!-- Если нужна навигация (влево/вправо) -->
+							<button type="button" class="swiper-button-prev"></button>
+							<button type="button" class="swiper-button-next"></button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div class="footer__body">
+					<div class="footer__row row-footer">
+						<div class="row-footer__body">
+							<div class="row-footer__col col-footer-left">
+								<div class="col-footer-left__body">
+									<form action="#" class="col-footer-left__form form-footer">
+										<div class="form-footer__title">
+											<h3>Надіслати повідомлення</h3>
+										</div>
+										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваще имя" class="form-footer__name">
+										<input autocomplete="off" type="tel" name="form[]" data-error="Ошибка" placeholder="Ваш телефон" class="form-footer__mobile">
+										<input autocomplete="off" type="email" name="form[]" data-error="Ошибка" placeholder="E-mail" class="form-footer__email">
+										<textarea class="form-footer__textarea" placeholder="Повідомлення" name="" id="" cols=" 30" rows="5"></textarea>
+										<button type="submit" class="form-footer__button">Залишити заявку</button>
+										<div class="form-footer__checkbox checkbox-footer">
+											<input id="c_1" data-error="Ошибка" class="checkbox-footer__input" type="checkbox" value="1" name="form[]">
+											<label for="c_1" class="checkbox-footer__label"><span class="checkbox-footer__text">Використовуючи форму зворотнього зв'язку, користувач дає
+													свою згоду з умовами справжньої політики конфіденційності</span></label>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="row-footer__col col-footer-right">
+								<div class="col-footer-right__body">
+									<div class="col-footer-right__item item-footer">
+										<div class="item-footer__label">Нас легко знайти</div>
+										<div class="item-footer__contact-block contact-block-footer">
+											<div class="contact-block-footer__body">
+												<div class="contact-block-footer__location"><img src="img/footer/location.svg" alt="location">м. Київ, вул. Бориспільська, 19</div>
+												<div class="contact-block-footer__phone"><img src="img/footer/phone.svg" alt="phone"><a href="tel:+380500102800">+38 (050) 010 28 00</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="col-footer-right__location"><img src="img/footer/location-big.svg" alt="location">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer__row row-footer-copy">
+				<div class="row-footer-copy__body">
+					<div class="row-footer-copy__copy">
+						© 2022 Б19. Усі права захищені
+					</div>
+				</div>
 			</div>
 		</footer>
 	</div>
-	<!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
-			<div class="popup__text">
-				Text
-			</div>
-		</div>
-	</div>
-</div> -->
-	<script src="js/app.min.js?_v=20220606211646"></script>
+	<script src="js/app.min.js?_v=20220607180340"></script>
 </body>
 
 </html>
