--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220607180340">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220607183453">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -335,19 +335,28 @@
 									<div class="slide-slider-main__body">
 										<img src="img/slider-main/slide1.jpg" alt="">
 									</div>
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
 									<div class="slide-slider-main__body">
 										<img src="img/slider-main/slide1.jpg" alt="">
 									</div>
 								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide1.jpg" alt="">
+									</div>
+								</div>
+
 							</div>
 							<!-- Если нужна пагинация -->
 							<div class="swiper-pagination"></div>
@@ -411,7 +420,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220607180340"></script>
+	<script src="js/app.min.js?_v=20220607183453"></script>
 </body>
 
 </html>
