--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220607183453">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220607190525">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,12 +50,12 @@
 							<div class="header__menu menu">
 								<nav class="menu__body">
 									<div class="menu__home">
-										<a href="/"><img src="img/header/home-icon.svg" alt="Home"></a>
+										<a class="active" href="/"><img src="img/header/home-icon.svg" alt="Home"></a>
 									</div>
 									<button type="button" class="search__exit"><span class="menu-icon"></span></button>
 									<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Введите поисковый запрос" class="menu__input hide">
 									<ul class="menu__list">
-										<li class="menu__item"><a href="#" class="menu__link active">Про нас</a></li>
+										<li class="menu__item"><a href="#" class="menu__link">Про нас</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
@@ -420,7 +420,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220607183453"></script>
+	<script src="js/app.min.js?_v=20220607190525"></script>
 </body>
 
 </html>
