--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,10 +6,15 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220607190525">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220608134552">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<style>
+	body {
+		background-color: #F2F2F2;
+	}
+</style>
 
 <body>
 	<div class="wrapper">
@@ -55,7 +60,8 @@
 									<button type="button" class="search__exit"><span class="menu-icon"></span></button>
 									<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Введите поисковый запрос" class="menu__input hide">
 									<ul class="menu__list">
-										<li class="menu__item"><a href="#" class="menu__link">Про нас</a></li>
+										<li class="menu__item"><a href="about.html" class="menu__link">Про нас</a>
+										</li>
 										<li class="menu__item"><a href="#" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
@@ -420,7 +426,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220607190525"></script>
+	<script src="js/app.min.js?_v=20220608134552"></script>
 </body>
 
 </html>
