--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220608134552">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220608165557">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -65,8 +65,7 @@
 										<li class="menu__item"><a href="#" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
-												<li class="menu__subitem"><a href="#" class="menu__sublink">Збірні модульні будинки
-														MODO</a></li>
+												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Бетону</a></li>
 												<li class="menu__subitem"><a href="#" class="menu__sublink">Багатоповерхові панельні
 														будинки</a></li>
 											</ul>
@@ -106,15 +105,13 @@
 									<button type="button" class="menu__icon icon-menu"><span class="menu-icon"></span></button>
 									<nav class="mobilemenu">
 										<ul class="mobilemenu__list">
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Головна</a></li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Про нас</a></li>
+											<li class="mobilemenu__item"><a href="/" class="mobilemenu__link">Головна</a></li>
+											<li class="mobilemenu__item"><a href="about.html" class="mobilemenu__link">Про нас</a></li>
 											<li class="mobilemenu__item">
 												<a href="#" class="mobilemenu__link">Виробництво</a>
 												<div class="menu__arrow"></div>
-
 												<ul class="mobilemenu__sublist">
-													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Збірні модульні
-															будинки MODO </a></li>
+													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Бетону</a></li>
 													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Багатоповерхові
 															панельні будинки</a></li>
 												</ul>
@@ -426,7 +423,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220608134552"></script>
+	<script src="js/app.min.js?_v=20220608165557"></script>
 </body>
 
 </html>
