--- a/portfolio/B19/productionb.html
+++ b/portfolio/B19/productionb.html
@@ -138,90 +138,148 @@
 				</div>
 			</div>
 		</header>
-		<div class="top-about">
-			<div class="top-about__container">
-				<div class="top-about__body">
-					<div class="top-about__col col-top-about left">
-						<div class="col-top-about__body">
-							<div class="col-top-about__title title">
-								<h1><span class="yellow-title">Про нас</span></h1>
-							</div>
-							<div class="col-top-about__text">
-								<p>Нас об'єднала війна.
-									Вона прийшла без стуку, ми побоювалися її, але сподівалися до останнього, що це не станеться.
-									Раніше ми кожен мешкали своїм життям, іноді перетиналися за спільними проектами. Йшли паралельними
-									шляхами.
-								</p>
-								<p>І цей складний момент у долі нашої країни ми зрозуміли, що в об'єднанні наша сила. Зібравшись
-									разом, ми зможемо побудувати нову Україну. Краще, красивіше, технологічніше. Ми нове покоління
-									будівельників, з європейськими цінностями, духовністю та величезним бажанням змінити світ на краще.
-								</p>
-							</div>
-							<div class="col-top-about__label">
-								<h3>Ми будуємо наше майбутнє разом!
-								</h3>
-							</div>
-							<div class="col-top-about__button"><a href="#" class="col-top-about__btn button">Каталог продукції</a>
-							</div>
-						</div>
+		<div class="toppb">
+			<div class="toppb__container">
+				<div class="toppb__body">
+					<div class="toppb__title title">
+						<h1><span class="yellow-title">Виробництво</span> <span class="yellow-title">бетону</span></h1>
 					</div>
-					<div class="top-about__col col-top-about right">
-						<div class="col-top-about__body right">
-							<div class="col-top-about__image"><img src="img/top-about/back.png" alt="image"></div>
-						</div>
+					<div class="toppb__text">
+						<p>Наша компанія займається власним виробництвом товарного бетону, готового бетону, готового розчину
+							цементного, бетону кладки марок М100, М150, М200, М250, М350, М400, М450, М500, М600, М700, М800, М900
+						</p>
 					</div>
+					<div class="toppb__label">
+						<p>Сьогодні бетон є одним із найпопулярніших будівельних матеріалів. Він:</p>
+					</div>
+					<ul class="toppb__list">
+						<li class="toppb__item">міцний, надійний.</li>
+						<li class="toppb__item">вогне-, морозо-, жаростійкий.</li>
+						<li class="toppb__item">стійкий у хімічно агресивному водному та газовому середовищі.</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 		<main class="page">
-			<div class="benefitsa">
-				<div class="benefitsa__container">
-					<div class="benefitsa__body">
-						<div class="benefitsa__row row-benefitsa">
-							<div class="row-benefitsa__item item-benefista">
-								<div class="item-benefista__body">
-									<div class="item-benefista__image">
-										<img src="img/benefitsa/back.jpg" alt="img">
+			<div class="benefitspb">
+				<div class="benefitspb__container">
+					<div class="benefitspb__body">
+						<div class="benefitspb__image"></div>
+						<div class="benefitspb__title">
+							<h3>Б19 пропонує широкий асортимент бетонних/цементних розчинів для різноманітних потреб будівництва. Ми як
+								виробник бетону, завод, гарантуємо якість нашої продукції. </h3>
+						</div>
+						<div class="benefitspb__row row-benefitspb">
+							<div class="row-benefitspb__item item-benefitspb">
+								<div class="item-benefitspb__body">
+									<div class="item-benefitspb__text">
+										<p>Найпопулярніша марка, яку наш завод найбільше замовляє - <b>М 200 ПЗ</b>. За іншою класифікацією
+											- <b>В 15 ПЗ</b> (ПЗ -сильнорухлива). Вона має оптимальне для нашого географічного положення
+											співвідношення міцності та стійкості до різних кліматичних умов.
+										</p>
 									</div>
 								</div>
 							</div>
-							<div class="row-benefitsa__item item-benefista">
-								<div class="item-benefista__body right">
-									<ul class="item-benefista__list">
-										<li class="item-benefista__item">
-											<p>Ми виготовляємо бетон на власному РБУ (1000м3 на добу)
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми виготовляємо панелі для модульних будинків (10 000м2 на місяць)
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми виробляємо всі супутні інженерні системи (сходові марші, вентблоки та ін.)
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми проектуємо
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми виготовляємо меблі
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми проводимо роботи зі збирання та оздоблення своїми робітниками
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми робимо демонтажні роботи
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Робота з нами дозволить отримати і забудовника та виробника будматеріалів в одній особі
-											</p>
-										</li>
-									</ul>
-									<div class="item-benefista__back"><img src="img/benefitsa/y-back.png" alt="back"></div>
+							<div class="row-benefitspb__item item-benefitspb">
+								<div class="item-benefitspb__body">
+									<div class="item-benefitspb__text">
+										<p>
+											Здебільшого покупці орієнтуються на марку міцності бетону та його заповнювачі. Саме з цих
+											параметрів головним чином формується ціна.
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="row-benefitspb__item item-benefitspb">
+								<div class="item-benefitspb__body">
+									<div class="item-benefitspb__text">
+										<p>
+											Зазвичай для будівництва будинків або іншої інфраструктури (гаражів, майданчиків) відбувається
+											вибір між марками М100 до М400, які повністю покривають всі вимоги.
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="row-benefitspb__item item-benefitspb">
+								<div class="item-benefitspb__body">
+									<div class="item-benefitspb__text">
+										<p>
+											Бетон – це не той матеріал, на якому можна заощаджувати.
+											Будьте уважні – завжди вибирайте оптимальний для ваших робіт матеріал. У будівництві
+											найголовніше - це золоте співвідношення ціни та якості.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="benefitspb__label">
+							<p>Весь бетон сертифікований на 100% та відповідає всім стандартам</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="eagle">
+				<div class="eagle__container">
+					<div class="eagle__body">
+						<div class="eagle__title">
+							<h2>Бетонно-змішувальна установка SIMEM EAGLE 100</h2>
+						</div>
+						<div class="eagle__slider swiper-eagle">
+							<div class="eagle__wrapper swiper-wrapper">
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="eagle__title">
+							<h2>Система керування установки SIMEMATIC TOUCH </h2>
+						</div>
+						<div class="eagle__slider swiper-eagle">
+							<div class="eagle__wrapper swiper-wrapper">
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide1.jpg" alt="">
+								</div>
+								<div class="eagle__slide swiper-slide">
+									<img src="img/eagle/slide2.jpg" alt="">
 								</div>
 							</div>
 						</div>
