--- a/portfolio/B19/production.html
+++ b/portfolio/B19/production.html
@@ -10,11 +10,6 @@
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<style>
-	body {
-		background-color: #F2F2F2;
-	}
-</style>
 
 <body>
 	<div class="wrapper">
@@ -143,30 +138,28 @@
 				</div>
 			</div>
 		</header>
-		<div class="topm">
-			<div class="topm__container">
-				<div class="topm__body">
-					<div class="topm__col col-topm">
-						<div class="col-topm__body">
-							<div class="col-topm__title title">
-								<h1><span class="yellow-title"> Б19</span> - ВИРОБНИК І ЗАБУДІВНИК
-								</h1>
-							</div>
-							<div class="col-topm__text">
-								<p>
-									Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is
-									pain, but because occasionally circumstances
-								</p>
-							</div>
-							<div class="col-topm__button">
-								<a href="#" class="col-topm__btn button">Детальніше</a>
+		<div class="topp">
+			<div class="topp__container">
+				<div class="topp__body">
+					<div class="topp__row row-topp">
+						<div class="row-topp__item item-topp left">
+							<div class="item-topp__body">
+								<div class="item-topp__text">
+									<p>Наша компанія пропонує різноманітні послуги, щоб задовольнити потреби вашого проекту, починаючи
+										від зустрічей для співпраці й закінчуючи розрізанням стрічки й не тільки. Ми віримо, що кожен
+										проект унікальний, і можемо налаштувати наш підхід відповідно до вашого конкретного проекту.
+										Незважаючи на те, що ми перебуваємо в авангарді та спеціалізуємося на розробці дизайну, ми добре
+										знайомі з рядом методів доставки та впевнені, що зможемо знайти процес, який найкраще допоможе
+										вам досягти ваших цілей.</p>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="topm__col col-topm-image">
-						<div class="col-topm-image__body">
-							<div class="col-topm-image__image">
-								<img src="img/top/houses-main.png" alt="">
+						<div class="row-topp__item item-topp right">
+							<div class="item-topp__body right">
+								<div class="item-topp__title">
+									<h1>Онлайн-каталог</h1>
+								</div>
+								<div class="item-topp__image"><a href="#" class="item-topp__link"><img src="img/topp/catalog.jpg" alt="Catalog"></a></div>
 							</div>
 						</div>
 					</div>
@@ -174,198 +167,66 @@
 			</div>
 		</div>
 		<main class="page">
-			<div class="benefits">
-				<div class="benefits__container">
-					<div class="benefits__body">
-						<div class="benefits__row row-benefits">
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body item01">
-									<div class="item-benefits__image"><img src="img/benefits/item01.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Сучасність</h3>
+			<div class="productions">
+				<div class="productions__container">
+					<div class="productions__body">
+						<div class="productions__row row-productions">
+							<div class="row-productions__item item-productions">
+								<div class="item-productions__body">
+									<div class="item-productions__image"><img src="img/productions/item1.jpg" alt="item1">
+										<a class="item-productions__link" href="#">
+											<div class="item-productions__text">
+												<p>Виробництво бетону</p>
+											</div>
+										</a>
 									</div>
-								</div>
-							</div>
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body">
-									<div class="item-benefits__image item02"><img src="img/benefits/item02.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Швидкість</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body item03">
-									<div class="item-benefits__image item03"><img src="img/benefits/item03.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Відповідальність</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body">
-									<div class="item-benefits__image item04"><img src="img/benefits/item04.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Репутація</h3>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="slider-top-main">
-				<div class="slider-top-main__container">
-					<div class="slider-top-main__body">
-						<div class="slider-top-main__slider swiper">
-							<div class="slider-top-main__wrapper swiper-wrapper">
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-							</div>
-							<!-- Если нужна пагинация -->
-							<div class="swiper-pagination"></div>
-							<!-- Если нужна навигация (влево/вправо) -->
-							<button type="button" class="swiper-button-prev"></button>
-							<button type="button" class="swiper-button-next"></button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="newlvl">
-				<div class="newlvl__container">
-					<div class="newlvl__body">
-						<div class="newlvl__frame"></div>
-						<div class="newlvl__text">
-							<p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
-								but because occasionally circumstances Nor again is there anyone who loves or pursues or desires to
-								obtain pain of itself, because it is pain, but because occasionally circumstances </p>
-						</div>
-						<div class="newlvl__title"><span class="yellow-title">Б19 - НОВИЙ РІВЕНЬ </span><span class="yellow-title">МЕНЕДЖМЕНТУ</span></div>
-						<div class="newlvl__row row-newlvl">
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item01.png" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми сучасні</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item02.png" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми - доступні та швидкі</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item03.png" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми відповідаємо</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item04.svg" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми у Києві</h3>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="slider-main">
-				<div class="slider-main__container">
-					<div class="slider-main__body">
-						<div class="slider-main__title title">
-							<h2><span class="yellow-title">Наші проєкти</span></h2>
-						</div>
-						<div class="slider-main__slider swiper">
-							<div class="slider-main__wrapper swiper-wrapper">
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
-									</div>
-								</div>
 
+								</div>
 							</div>
-							<!-- Если нужна пагинация -->
-							<div class="swiper-pagination"></div>
-							<!-- Если нужна навигация (влево/вправо) -->
-							<button type="button" class="swiper-button-prev"></button>
-							<button type="button" class="swiper-button-next"></button>
+							<div class="row-productions__item item-productions">
+								<div class="item-productions__body">
+									<div class="item-productions__image"><img src="img/productions/item02.jpg" alt="item1">
+										<a class="item-productions__link" href="#">
+											<div class="item-productions__text">
+												<p>Виробництво панелей</p>
+											</div>
+										</a>
+									</div>
+
+								</div>
+							</div>
+							<div class="row-productions__item item-productions">
+								<div class="item-productions__body">
+									<div class="item-productions__image"><img src="img/productions/item03.jpg" alt="item1">
+										<a class="item-productions__link" href="#">
+											<div class="item-productions__text">
+												<p>Залізобетонні конструкції</p>
+											</div>
+										</a>
+									</div>
+
+								</div>
+							</div>
+							<div class="row-productions__item item-productions">
+								<div class="item-productions__body">
+									<div class="item-productions__image"><img src="img/productions/item04.jpg" alt="item1">
+										<a class="item-productions__link" href="#">
+											<div class="item-productions__text">
+												<p>Виробництво меблів</p>
+											</div>
+										</a>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="videop">
+				<div class="videop__container">
+					<div class="videop__body">
+						<div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videop__video"><video controls src="https://zverzor.github.io/aloha/portfolio/B19/video/production.mp4" codecs="h264" type='video/mp4'></video>
 						</div>
 					</div>
 				</div>
