--- a/portfolio/B19/productionb.html
+++ b/portfolio/B19/productionb.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220608165557">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220608195501">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -57,7 +57,7 @@
 									<ul class="menu__list">
 										<li class="menu__item"><a href="about.html" class="menu__link">Про нас</a>
 										</li>
-										<li class="menu__item"><a href="#" class="menu__link">Виробництво</a>
+										<li class="menu__item"><a href="production.html" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
 												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Бетону</a></li>
@@ -103,7 +103,7 @@
 											<li class="mobilemenu__item"><a href="/" class="mobilemenu__link">Головна</a></li>
 											<li class="mobilemenu__item"><a href="about.html" class="mobilemenu__link">Про нас</a></li>
 											<li class="mobilemenu__item">
-												<a href="#" class="mobilemenu__link">Виробництво</a>
+												<a href="production.html" class="mobilemenu__link">Виробництво</a>
 												<div class="menu__arrow"></div>
 												<ul class="mobilemenu__sublist">
 													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Бетону</a></li>
@@ -339,7 +339,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220608165557"></script>
+	<script src="js/app.min.js?_v=20220608195501"></script>
 </body>
 
 </html>
